@@ -2,6 +2,8 @@
 - AI / WM:
 	- Invert the roll target when the fly-to direction is below and behind the craft.
 	- Fix automatic gun range adjustments in the WM again.
+- Weapons:
+	- Corrections to penetration and ricochet velocity changes.
 
 v1.6.9.0
 IMPROVEMENTS / FIXES
